--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: vazir;
+  src: url(../public/fonts/Vazir-Medium.ttf),
+    url(../public/fonts/Vazir-Bold.ttf);
+  font-weight: normal;
+}
+
 html,
 body,
 :root {
   height: 100%;
+}
+
+.___body-messages {
+  font-family: vazir, sans-serif;
 }
