--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,8 @@ body,
   height: 100%;
 }
 
-.___body-messages {
+.___body-messages,
+.___message-input,
+.___last-messages {
   font-family: vazir, sans-serif;
 }
